--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,10 +16,9 @@
   </head>
   <body style="background-color:black;"  text="white">
     <button class="button" onclick="location.href='index.html';">Home</button>
-    <p>We develop our games in Unity, we use Blender to 3D model and animate, and we use Visual Studio to code our games.</p>
-    <p>We have 1 official member and 1 unofficial member. We prefer not to use our real names (my name is not actually CMDR Megashot772 of course)</p>
-    <p>I (CMDR Megashot7727) code and design the games while my partner makes the art and music. (but the team may change later)</p>
+    <p>I develop our games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
+    <p>Currently it is just me working on games but sometimes I get help from friends and people I know.</p>
     <h3>Contact</h3>
-    <p>Feel free to contact us at mega.done.shot@gmail.com</p>
+    <p>Feel free to contact me at mega.done.shot@gmail.com</p>
   </body>
 </html>
