--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
     <h2>Space Defence Fighter 37 (SDF-37)</h2>
     <p>SDF-37 is the successor to Space Race. I are building this game from the ground up in Unity Engine, overhauling the movement system, removing the "classes" and replacing them with weapon and ability pick-ups.</p>
     <p>I are adding multiplayer, campaign mode, AI battlegrounds to test your ability, many more weapons, more abilities, better graphics, and a storyline!</p>
-    <button class="button" onclick="location.href='https://github.com/Megashot-Industries/SDF-37';">SDF-37 (WIP)</button>
+    <button class="button" onclick="location.href='https://github.com/megashot7727/SDF-37';">SDF-37 (WIP) (and Space Race)</button>
     <br>
     <h2>Other Projects</h2>
     <button class="button" onclick="location.href='theParticleGame.html';">The Particle Game</button>
