--- a/projects.html
+++ b/projects.html
@@ -37,5 +37,7 @@
     <br>
     <h2>Other Projects</h2>
     <button class="button" onclick="location.href='theParticleGame.html';">The Particle Game</button>
+    
+    <h6>If you support me on Patreon, you can get a copy of Space Race!</h6>
   </body>
 </html>
