--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
       }
       
       .button:hover {
+        background-color: #EEEEEE;
         transform: translateY(2px);
       }
     </style>
