--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
       
       .button:hover {
-        background-color: #EEEEEE;
+        background-color: #DDDDDD;
         transform: translateY(2px);
       }
     </style>
