--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <title>CMDR Megashot7727</title>
+    
     <style>
       .button {
         padding: 8px 16px;
