--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
   <head>
     <style>
+      <title>CMDR Megashot7727</title>
+      
       .button {
         padding: 8px 16px;
         background-color: #FFFFFF;
