--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
   <head>
     <style>
+      <title>Projects</title>
+      
       .button {
         padding: 8px 16px;
         background-color: #FFFFFF;
