--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <style>
-      <title>CMDR Megashot7727</title>
+      <title>About Me</title>
       
       .button {
         padding: 8px 16px;
