--- a/theParticleGame.html
+++ b/theParticleGame.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <title>The Particle Game</title>
+    
     <style>
       .button {
         padding: 8px 16px;
