--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,6 +3,11 @@
   <head>
     <title>About Me</title>
     <style>
+      <meta name="description" content="CMDR Megashot7727 Home Page">
+      <meta name="author" content="CMDR Megashot7727">
+      <meta name="keywords" content="CMDR, Megashot7727, Youtube, Elite Dangerous, Kerbal Space Program, KSP, Subnautica">
+      <meta charset="UTF-8">
+      
       .button {
         padding: 8px 16px;
         background-color: #FFFFFF;
