--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,11 @@
 <html lang="en-US">
   <head>
     <title>Projects</title>
+    <meta name="description" content="CMDR Megashot7727 Home Page">
+    <meta name="author" content="CMDR Megashot7727">
+    <meta name="keywords" content="CMDR, Megashot7727, Youtube, Elite Dangerous, Kerbal Space Program, KSP, Subnautica">
+    <meta charset="UTF-8">
+    
     <style>
       .button {
         padding: 8px 16px;
