--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body style="background-color:black;" text="white">
     <b>
     <h1>CMDR Megashot7727</h1>
-    <p>I'm and amateur game developer. My current main projects are Megashot VR and Space Defense Fighter 37.</p>
+    <p>I'm an amateur game developer. My current main projects are Megashot VR and Space Defense Fighter 37.</p>
     <button class="button" onclick="location.href='projects.html';">Projects</button>
     <button class="button" onclick="location.href='aboutMe.html';">About Me</button>
     <p><a href="https://www.patreon.com/bePatron?u=10576699" data-patreon-widget-type="become-patron-button">Support me on Patreon!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></p>
