--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body style="background-color:black;"  text="white">
-    <button class="button" onclick="location.href='index.html';">Home</button>
+    <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <p>I develop our games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
     <p>Currently it is just me working on games but sometimes I get help from friends and people I know.</p>
     <h3>Contact</h3>
