--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body style="background-color:black;"  text="white">
-    <h1>Projects</h1><button class="button" onclick="location.href='index.html';">Home</button>
+    <h1>Projects</h1><button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <h2>Megashot VR</h2>
     <p>Megashot VR is a VR game that I am developing for the Oculus Quest. It's a shooter style game set in the near-future where you infiltrate enemy bases, kill guard robots, and steal enemy intelligence.</p>
     <p>When you kill high-ranking guards, you get their security keycard so that you can access more parts of the base.</p>
