--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
   </head>
   <body style="background-color:black;" text="white">
     <b>
-    <h1>CMDR Megashot7727</h1>
-    <p>I'm an amateur game developer. My current main projects are Megashot VR and Space Defense Fighter 37.</p>
+    <h1>CMDR Megashot7727 (Caden Oslund)</h1>
     <button class="button" onclick="location.href='projects.html';">Projects</button>
+    <button class="button" onclick="location.href='projects.html';">Megashot Robotics</button>
     <button class="button" onclick="location.href='aboutMe.html';">About Me</button>
+    <button class="button" onclick="location.href='resume.html';">My Resume</button>
     <p><a href="https://www.patreon.com/bePatron?u=10576699" data-patreon-widget-type="become-patron-button">Support me on Patreon!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></p>
     </b>
     </body>
