--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <title>CMDR Megashot7727</title>
+    <meta name="description" content="CMDR Megashot7727 Home Page">
+    <meta name="author" content="CMDR Megashot7727">
+    <meta name="keywords" content="CMDR, Megashot7727, Youtube, Elite Dangerous, Kerbal Space Program, KSP, Subnautica">
+    <meta charset="UTF-8">
+    
+    <style>
+      .button {
+        padding: 8px 16px;
+        background-color: #FFFFFF;
+        border-radius: 8px;
+        transition-duration: 0.4s;
+      }
+      
+      .button:hover {
+        background-color: #DDDDDD;
+        transform: translateY(2px);
+      }
+    </style>
+  </head>
+  <body style="background-color:black;" text="white">
+  </body>
+</html>
