--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>CMDR Megashot7727</title>
+    <title>My Resume</title>
     <meta name="description" content="CMDR Megashot7727 Home Page">
     <meta name="author" content="CMDR Megashot7727">
     <meta name="keywords" content="CMDR, Megashot7727, Youtube, Elite Dangerous, Kerbal Space Program, KSP, Subnautica">
@@ -22,5 +22,6 @@
     </style>
   </head>
   <body style="background-color:black;" text="white">
+    <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
   </body>
 </html>
