--- a/robotics.html
+++ b/robotics.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>My Resume</title>
-    <meta name="description" content="CMDR Megashot7727 Home Page">
-    <meta name="author" content="CMDR Megashot7727">
-    <meta name="keywords" content="CMDR, Megashot7727, Youtube, Elite Dangerous, Kerbal Space Program, KSP, Subnautica">
-    <meta charset="UTF-8">
+    <title>Megashot Robotics</title>
+    <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
       .button {
