--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en-US">
   <head>
     <title>CMDR Megashot7727</title>
-    <meta name="description" content="CMDR Megashot7727 Home Page">
-    <meta name="author" content="CMDR Megashot7727">
-    <meta name="keywords" content="CMDR, Megashot7727, Youtube, Elite Dangerous, Kerbal Space Program, KSP, Subnautica">
-    <meta charset="UTF-8">
+    <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
       .button {
