--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>CMDR Megashot7727</title>
+    <title>Home Page</title>
     <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
