--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
         padding: 8px 16px;
         background-color: #FFFFFF;
         border-radius: 8px;
-        transition-duration: 0.3;
+        transition-duration: 0.3s;
       }
       
       .button:hover {
