--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>CMDR Megashot7727 (Caden Oslund)</h1>
     <button class="button" onclick="location.href='projects.html';">Projects</button>
     <button class="button" onclick="location.href='robotics.html';">Megashot Robotics</button>
-    <button class="button" onclick="location.href='battleBot.html';">Discord Battle Bod</button>
+    <button class="button" onclick="location.href='battleBot.html';">Discord Battle Bot</button>
     <button class="button" onclick="location.href='aboutMe.html';">About Me</button>
     <p><a href="https://www.patreon.com/bePatron?u=10576699" data-patreon-widget-type="become-patron-button">Support me on Patreon!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></p>
     </b>
