--- a/battleBot.html
+++ b/battleBot.html
@@ -1,5 +1,4 @@
-  
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <title>Megashot Robotics</title>
@@ -21,5 +20,6 @@
   </head>
   <body style="background-color:black;" text="white">
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=68608&scope=bot';">Add to Your Server!</button>
   </body>
 </html>
