--- a/battleBot.html
+++ b/battleBot.html
@@ -20,6 +20,10 @@
   </head>
   <body style="background-color:black;" text="white">
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
-    <p><button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=68608&scope=bot';">Add to Your Server!</button></p>
+    <button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=68608&scope=bot';">Add to Your Server!</button>
+    <h2>Implemented Teams</h2<
+    <ul>
+      </i>Megashot Robotics</li>
+    </ul>
   </body>
 </html>
