--- a/battleBot.html
+++ b/battleBot.html
@@ -21,9 +21,10 @@
   <body style="background-color:black;" text="white">
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=68608&scope=bot';">Add to Your Server!</button>
-    <h2>Implemented Teams</h2<
+    <h2>Implemented Teams</h2>
     <ul>
       </i>Megashot Robotics</li>
     </ul>
+    </p>Email me at mega.done.shot@gmail.com to get your team implemented in the bot!</p>
   </body>
 </html>
