--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button class="button" onclick="location.href='battleBot.html';">Discord Battle Bot</button>
     <button class="button" onclick="location.href='aboutMe.html';">About Me</button>
     <p><a href="https://www.patreon.com/bePatron?u=10576699" data-patreon-widget-type="become-patron-button">Support me on Patreon!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></p>
-    <p>or <button class="button" onclick="https://www.youtube.com/channel/UCfaIDTOEyNT9tGSmQ8z45Tg';">Subscribe to me on YouTube!</button></p>
+    <p>or <button class="button" onclick="'https://www.youtube.com/channel/UCfaIDTOEyNT9tGSmQ8z45Tg?view_as=subscriber';">Subscribe to me on YouTube!</button></p>
     </b>
     </body>
 </html>
