--- a/battleBot.html
+++ b/battleBot.html
@@ -25,6 +25,6 @@
     <ul>
       <li>Megashot Robotics</li>
     </ul>
-    </p>Contact me at mega.done.shot@gmail.com with your team name, team members, bots, and optionally, a short description of each bot to get your team in the bot!</p>
+    </p>Contact me at mega.done.shot@gmail.com with your team name, team members, bots, and optionally, a short description of each bot to get your team into the bot!</p>
   </body>
 </html>
