--- a/battleBot.html
+++ b/battleBot.html
@@ -21,10 +21,14 @@
   <body style="background-color:black;" text="white">
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=68608&scope=bot';">Add to Your Server!</button>
+    <h1>The Discord Battle Bot</h1>
+    <h2>Info</h2>
+    <p>The Battle Bot is a Discord bot meant for robot combat servers. You can join "Chats About Robots" <a href="https://discordapp.com/invite/uAzAEFx">here</a> to see it in action!</p>
     <h2>Implemented Teams</h2>
     <ul>
       <li>Megashot Robotics</li>
     </ul>
     </p>Contact me at mega.done.shot@gmail.com with your team name, team members, bots, and optionally, a short description of each bot to get your team into the bot!</p>
+    <p>You can also contact me with feature requests for the bot!</p>
   </body>
 </html>
