--- a/battleBot.html
+++ b/battleBot.html
@@ -16,6 +16,18 @@
         background-color: #DDDDDD;
         transform: translateY(2px);
       }
+      
+      a:link {
+        color: aqua;
+        background-color: transparent;
+        text-decoration: none;
+      }
+
+      a:visited {
+        color: fuchsia;
+        background-color: transparent;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body style="background-color:black;" text="white">
