--- a/battleBot.html
+++ b/battleBot.html
@@ -36,8 +36,8 @@
     <h1>The Discord Battle Bot</h1>
     <h2>Info</h2>
     <p>The Battle Bot is a Discord bot meant for robot combat servers. You can join "Chats About Robots" <a href="https://discordapp.com/invite/uAzAEFx">here</a> to see it in action!</p>
-    <p>For the time being I cannot guarantee when the bot will be online. This is because the server is currently running on my laptop and shuts down when I close said laptop</p>
-    <p>I will be moving the server to my home PC which should make it run forever (unless I get a power outage). I will supply more information on this issue soon<sup>TM</sup></P.
+    <p>For the time being I cannot guarantee when the bot will be online. This is because the server is currently running on my laptop and shuts down when I close said laptop.</p>
+    <p>I will be moving the server to my home PC which should make it run forever (unless I get a power outage). I will supply more information on this issue soon<sup>TM</sup>.</P>
     <h2>Implemented Teams</h2>
     <ul>
       <li>Megashot Robotics</li>
