--- a/battleBot.html
+++ b/battleBot.html
@@ -1,7 +1,7 @@
   <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Megashot Robotics</title>
+    <title>Battle Bot</title>
     <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
