--- a/battleBot.html
+++ b/battleBot.html
@@ -42,7 +42,7 @@
     <ul>
       <li>Megashot Robotics</li>
     </ul>
-    </p>Contact me at mega.done.shot@gmail.com with your team name, team members, bots, and optionally, a short description of each bot to get your team into the bot!</p>
+    </p>Contact me at mega.done.shot@gmail.com with your team name, team members, and bots to get your team into the bot!</p>
     <p>You can also contact me with feature requests for the bot!</p>
   </body>
 </html>
