--- a/battleBot.html
+++ b/battleBot.html
@@ -40,7 +40,9 @@
     <p>I will be moving the server to my home PC which should make it run forever (unless I get a power outage). I will supply more information on this issue soon<sup>TM</sup>.</P>
     <h2>Implemented Teams</h2>
     <ul>
+      <li>Chaos Corp</li>
       <li>Megashot Robotics</li>
+      <li>Chunky Robotics</li>
     </ul>
     </p>Contact me at mega.done.shot@gmail.com with your team name, team members, and bots to get your team into the bot!</p>
     <p>You can also contact me with feature requests for the bot!</p>
