--- a/battleBot.html
+++ b/battleBot.html
@@ -41,6 +41,8 @@
     <h2>Implemented Teams</h2>
     <ul>
       <li>Chaos Corp</li>
+      <li>Hardcore Robotics</li>
+      <li>Team Aptyx Designs</li>
       <li>Megashot Robotics</li>
       <li>Chunky Robotics</li>
     </ul>
