--- a/battleBot.html
+++ b/battleBot.html
@@ -42,7 +42,7 @@
     <ul>
       <li>Chaos Corp</li>
       <li>Hardcore Robotics</li>
-      <li>Team Aptyx Designs</li>
+      <li>Aptyx Designs</li>
       <li>Megashot Robotics</li>
       <li>Chunky Robotics</li>
     </ul>
