--- a/battleBot.html
+++ b/battleBot.html
@@ -43,6 +43,8 @@
       <li>Chaos Corp</li>
       <li>Hardcore Robotics</li>
       <li>Aptyx Designs</li>
+      <li>RioBotz</li>
+      <li>Witch Doctor</li>
       <li>Megashot Robotics</li>
       <li>Chunky Robotics</li>
     </ul>
