--- a/battleBot.html
+++ b/battleBot.html
@@ -45,6 +45,7 @@
       <li>Aptyx Designs</li>
       <li>RioBotz</li>
       <li>Witch Doctor</li>
+      <li>Inertia Labs</li>
       <li>Megashot Robotics</li>
       <li>Chunky Robotics</li>
     </ul>
