--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,6 @@
     <h2>Other Projects</h2>
     <button class="button" onclick="location.href='theParticleGame.html';">The Particle Game</button>
     
-    <h3>If you support me on Patreon, you can get a copy of Space Race!</h63
+    <h3>If you support me on Patreon, you can get a copy of Space Race!</h3>
   </body>
 </html>
