--- a/battleBot.html
+++ b/battleBot.html
@@ -20,5 +20,7 @@
   </head>
   <body style="background-color:black;" text="white">
     <h1>Battle Bot</h1>
+    <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <button class="button" onclick="location.href='url';">Get Battle Bot!</button>
   </body>
 </html>
