--- a/battleBot.html
+++ b/battleBot.html
@@ -19,8 +19,9 @@
     </style>
   </head>
   <body style="background-color:black;" text="white">
-    <h1>Battle Bot</h1>
+    <h2>Battle Bot</h2>
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
-    <button class="button" onclick="location.href='url';">Get Battle Bot!</button>
+    <button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=3072&scope=bot';">Get Battle Bot!</button>
+    <p>You can see Battle Bot in action <a href='https://discordapp.com/invite/bpyV4FR'>here</a></p>
   </body>
 </html>
