--- a/battleBot.html
+++ b/battleBot.html
@@ -5,6 +5,10 @@
     <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
+      a:link {
+        color: Aqua;
+      }
+      
       .button {
         padding: 8px 16px;
         background-color: #FFFFFF;
