--- a/battleBot.html
+++ b/battleBot.html
@@ -5,7 +5,7 @@
     <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
-      a:link {
+      a:link, a:visited {
         color: Aqua;
       }
       
