Update and rename projects.html to games.html

--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Projects</title>
+    <title>Games</title>
     <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
     
     <style>
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body style="background-color:black;"  text="white">
-    <h1>Projects</h1><button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <h1>Games</h1><button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <h2>Megashot VR</h2>
     <p>Megashot VR is a VR game that I am developing for the Oculus Quest. It's a shooter style game set in the near-future where you infiltrate enemy bases, kill guard robots, and steal enemy intelligence.</p>
     <p>When you kill high-ranking guards, you get their security keycard so that you can access more parts of the base.</p>
@@ -38,7 +38,7 @@
     <p>SDF-37 is the successor to Space Race. I are building this game from the ground up in Unity Engine, overhauling the movement system, removing the "classes" and replacing them with weapon and ability pick-ups.</p>
     <p>I am adding multiplayer, campaign mode, AI battlegrounds to test your ability, many more weapons, more abilities, better graphics, and a storyline!</p>
     <br>
-    <h2>Other Projects</h2>
+    <h2>Other Games</h2>
     <button class="button" onclick="location.href='theParticleGame.html';">The Particle Game</button>
     
     <h3>If you support me on Patreon, you can get a copy of Space Race!</h3>
