--- a/robotics.html
+++ b/robotics.html
@@ -20,5 +20,8 @@
   </head>
   <body style="background-color:black;" text="white">
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <p>My only finished robot is a modified Viper named Megashot</p>
+    <p>I'm currently designing a double-flipper named Duo</p>
+    <p>Duo will be able to operate each flipper independently so it can roll the enemies onto their sides</p>
   </body>
 </html>
