--- a/robotics.html
+++ b/robotics.html
@@ -23,5 +23,6 @@
     <p>My only finished robot is a modified Viper named Megashot</p>
     <p>I'm currently designing a double-flipper named Duo</p>
     <p>Duo will be able to operate each flipper independently so it can roll the enemies onto their sides</p>
+    <p>Megashot will be participating in Seattle Bot Battles 2020 but there is no timeline for Duo's completion</p>
   </body>
 </html>
