--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,8 +20,9 @@
   </head>
   <body style="background-color:black;"  text="white">
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
-    <p>I develop our games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
-    <p>Currently it is just me working on games but sometimes I get help from friends and people I know.</p>
+    <p>I develop my games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
+    <p>I am a moderator of Chats About Robots (link on the Battle Bot page)</p>
+    <p>I have created one battlebot but I am working on another</p>
     <h3>Contact</h3>
     <p>Feel free to contact me at mega.done.shot@gmail.com</p>
   </body>
