--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,7 +22,7 @@
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <p>I develop my games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
     <p>I am a moderator of Chats About Robots (link on the Battle Bot page)</p>
-    <p>I have created one battlebot but I am working on another</p>
+    <p>I have only created one battlebot but I am working on another</p>
     <h3>Contact</h3>
     <p>Feel free to contact me at mega.done.shot@gmail.com</p>
   </body>
