--- a/battleBot.html
+++ b/battleBot.html
@@ -26,6 +26,6 @@
     <h2>Battle Bot</h2>
     <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
     <button class="button" onclick="location.href='https://discordapp.com/api/oauth2/authorize?client_id=674427304897675299&permissions=3072&scope=bot';">Get Battle Bot!</button>
-    <button class="button" onclick="location.href='https://discordapp.com/invite/bpyV4FR';">See Battle Bot in action!</button>
+    <button class="button" onclick="location.href='https://discord.gg/bpyV4FR';">See Battle Bot in action!</button>
   </body>
 </html>
