--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,5 +25,6 @@
     <p>I have only created one battlebot but I am working on another</p>
     <h3>Contact</h3>
     <p>Feel free to contact me at mega.done.shot@gmail.com</p>
+    <button class="button" onclick="location.href='https://megashot7727.github.io/';">My Resume</button>
   </body>
 </html>
