--- a/java.html
+++ b/java.html
@@ -20,7 +20,9 @@
   </head>
   <body style="background-color:black;" text="white">
     <b>
-    <h1>Java Advanced Math Package</h1><button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <h2>Java Advanced Math Package</h2><button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <button class="button" onclick="location.href='https://github.com/megashot7727/javaAdvancedMath/releases/download/v0.2/advancedMath.zip';">Download</button>
+    <h3>Functions</h3>
     </b>
     </body>
 </html>
