--- a/code.html
+++ b/code.html
@@ -24,6 +24,13 @@
     <h2>Java Advanced Math Package</h2>
     <p><button class="button" onclick="location.href='https://github.com/megashot7727/javaAdvancedMath/releases/download/v0.2/advancedMath.zip';">Download</button></p>
     <h3>Functions</h3>
+    <h4>round(double, int):</h4>
+    <p>Outputs "double" rounded to "int" decimal places</p>
+    <h4>autoRound(double, int):</h4>
+    <p>Outputs "double" rounded to the "int" biggest places</p>
+    <p>(ie. autoRound(12345.12345, 3) = 12300.0 or autoRound(3.14159265358979, 4) = 3.1416)</p>
+    <h4>random():</h4>
+    <p>Outputs random number from 0 to the integer max value</p>
     </b>
     </body>
 </html>
