--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,6 +23,9 @@
     <p>I develop my games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
     <p>I am a moderator of Chats About Robots (link on the Battle Bot page)</p>
     <p>I have only created one battlebot but I am working on another</p>
+    <h3>Social Media</h3>
+    <p>You can find my Youtube channel <a href='https://www.youtube.com/channel/UCfaIDTOEyNT9tGSmQ8z45Tg?view_as=subscriber'>here</a></p>
+    <p>You can find my Twitch channel <a href='https://www.twitch.tv/cmdr_megashot7727'>here</a></p>
     <h3>Contact</h3>
     <p>Feel free to contact me at mega.done.shot@gmail.com</p>
     <button class="button" onclick="location.href='https://docs.google.com/document/d/1nXX9rMgaDP2HGGKaBrnSAPsQ4k4wffnWprPWtoAlOSw/edit?usp=sharing';">My Resume</button>
