--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
   </head>
   <body style="background-color:black;" text="white">
     <b>
-    <h1>CMDR Megashot7727 (Caden Oslund)</h1>
-    <button class="button" onclick="location.href='games.html';">Games</button>
-    <button class="button" onclick="location.href='robotics.html';">Robotics</button>  
-    <button class="button" onclick="location.href='code.html';">Code</button>
+    <h1>Admiral Gama</h1>
+    <button class="button" onclick="location.href='theParticleGame.html';">The Particle Game</button>
     <button class="button" onclick="location.href='aboutMe.html';">About Me</button>
-    <p><a href="https://www.patreon.com/bePatron?u=10576699" data-patreon-widget-type="become-patron-button">Support me on Patreon!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></p>
     </b>
     </body>
 </html>
