--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>About Me</title>
-    <meta name="author" content="CMDR Megashot7727 (Caden Oslund)">
+    <meta name="author" content="Admiral Gama">
     
     <style>
       .button {
