--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h1>Admiral Gama</h1>
     <button class="button" onclick="location.href='theParticleGame.html';">The Particle Game</button>
     <button class="button" onclick="location.href='aboutMe.html';">About Me</button>
-    <button class="button onclick="lightMode()">Click me</button>
+    <button class="button" onclick="lightMode()">Click me</button>
     </b>
     <script>
       function lightMode() {
