--- a/theParticleGame.html
+++ b/theParticleGame.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body style="background-color:black;"  text="white" onload="loadFunction()">
-    <h2><p id="title">The Particle Game</p></h2> <button class="button" onclick="location.href='https://megashot7727.github.io/';">Home</button>
+    <h2><p id="title">The Particle Game</p></h2> <button class="button" onclick="location.href='https://admiralgama.github.io/';">Home</button>
     <h3>Particles</h2>
     <b><p id="quark"></p>
     <button class="button" onclick="quarksUp()">Make a Quark</button>
