--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,6 +5,16 @@
     <meta name="author" content="Admiral Gama">
     
     <style>
+      body {
+        background-color: white;
+        color: black;
+      }
+      
+      .dark-mode {
+        background-color: black;
+        color: white;
+      }
+
       .button {
         padding: 8px 16px;
         background-color: #FFFFFF;
@@ -18,7 +28,8 @@
       }
     </style>
   </head>
-  <body style="background-color:black;"  text="white">
+  <body>
+    <button class="button" onclick="darkMode()">Light/Dark Mode</button>
     <button class="button" onclick="location.href='https://admiralgama.github.io/';">Home</button>
     <p>I develop my games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
   </body>
