--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,5 +32,11 @@
     <button class="button" onclick="darkMode()">Light/Dark Mode</button>
     <button class="button" onclick="location.href='https://admiralgama.github.io/';">Home</button>
     <p>I develop my games my Unity, I use Blender to 3D model and animate, and I use Visual Studio to code my games.</p>
+    <script>
+      function darkMode() {
+        var element = document.body;
+        element.classList.toggle("dark-mode");
+      }
+    </script>
   </body>
 </html>
