--- a/theParticleGame.html
+++ b/theParticleGame.html
@@ -28,7 +28,7 @@
       }
     </style>
   </head>
-  <body style="background-color:black;"  text="white" onload="loadFunction()">
+  <body onload="loadFunction()">
     <h2><p id="title">The Particle Game</p></h2> <button class="button" onclick="location.href='https://admiralgama.github.io/';">Home</button>
     <button class="button" onclick="darkMode()">Light/Dark Mode</button>
     <h3>Particles</h2>
